tests/idris2/error/perror019/expected
1/1: Building ImplError (ImplError.idr)
Error: Implementation body can only contain definitions

ImplError:5:3--5:4
 1 | data Foo = Bar
 2 |
 3 | implementation Show Foo where
 4 |   show Bar = "a Foo"
 5 |   f
       ^

